--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 		background-color:#fafafa;
 	}
 	.node {
-		fill: #2679B2;
-		fill-opacity:0.8;
+		/**fill: #2679B2;**/
 		stroke: white;
 		stroke-opacity:0.8;
 	}
@@ -28,11 +27,15 @@
 	   stroke: #fff;
 	   stroke-width:0px;
 	}
-	svg{
+	svg .svg_main{
 		position: absolute;
 		left: 0px;
 		top: 0px;
 
+	}
+
+	svg .svg_bottom{
+		position: absolute;
 	}
 
 	.label_{
@@ -56,19 +59,19 @@
 	}
 </style>
 
-<script src="/js/jquery-3.1.1.min.js" charset="utf-8" ></script>
-<script src="/js/d3.v3.min.js" charset="utf-8" ></script>
+<script src="js/jquery-3.1.1.min.js" charset="utf-8" ></script>
+<script src="js/d3.v3.min.js" charset="utf-8" ></script>
 
 <script type="text/javascript" src="d3.v4.js"></script>
 <script type="text/javascript" src="d3-legend.js"  charset="utf-8"></script>	
 <script type="text/javascript" src="d3-scale-chromatic.v1.1.js"></script>
 
-<script type="text/javascript" src="/js/dat.gui.js"></script>
-<script type="text/javascript" src="/js/netClustering.js"></script>
-<script type="text/javascript" src="/js/forceInABox.js"></script>
-<script type="text/javascript" src="/js/colorbrewer.js"></script>
-<script type="text/javascript" src="/js/colorbar.js"></script>
-<script type="text/javascript" src="/bootstrap-4.1.0-dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/dat.gui.js"></script>
+<script type="text/javascript" src="js/netClustering.js"></script>
+<script type="text/javascript" src="js/forceInABox.js"></script>
+<script type="text/javascript" src="js/colorbrewer.js"></script>
+<script type="text/javascript" src="js/colorbar.js"></script>
+<script type="text/javascript" src="bootstrap-4.1.0-dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="bootbox.min.js"></script>
 <script type="text/javascript" src="multi_keyword.js" charset="utf-8"></script>
 
