--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		margin: 0;
 		padding: 0;
 		cursor: pointer;
-		background-color:#fafafa;
+		background-color:#fff;
 	}
 	.node {
 		/**fill: #2679B2;**/
@@ -16,9 +16,9 @@
 		stroke-opacity:0.8;
 	}
 	.link {
-		stroke-width:2px;
+		stroke-width:1px;
 		stroke: #33A02C;
-		stroke-opacity:0.8;
+		stroke-opacity:0.5;
 		fill: none;
 	}
 	
