Area Layout recompute

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 	
 	.area, .area2{
 	   fill-opacity:1;
-	   stroke: #fff;
-	   stroke-width:0px;
+	   stroke: #33A02C;
+	   stroke-opacity:0.1;
+	   stroke-width:1px;
 	}
 	svg .svg_main{
 		position: absolute;
