--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
 	.bootbox.modal > .modal-dialog {
 	  z-index: 99999 !important;
 	}
+
+	div.tooltip {	
+	    position: absolute;			
+	    text-align: left;			
+	    width: 600px;					
+	    height: 60px;					
+	    padding: 2px;				
+	    font: 12px sans-serif;		
+	    background: lightsteelblue;	
+	    border: 0px;		
+	    border-radius: 8px;			
+	    pointer-events: none;			
+	}
 </style>
 
 <script src="js/jquery-3.1.1.min.js" charset="utf-8" ></script>
