--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 	    border-radius: 8px;			
 	    pointer-events: none;			
 	}
+
+	.treemapcell{
+		fill-opacity:0.1;
+		stroke: #999;
+	  stroke-width:4px;
+	}
 </style>
 
 <script src="js/jquery-3.1.1.min.js" charset="utf-8" ></script>
