--- a/brain2_line.html
+++ b/brain2_line.html
@@ -9,7 +9,7 @@
 		margin: 0;
 		padding: 0;
 		cursor: pointer;
-		background-color:#000;
+		background-color:#fff;
 		overflow: hidden;
 	}
 	.node {
