--- a/brain-ui/brain2_line.html
+++ b/brain-ui/brain2_line.html
@@ -18,7 +18,7 @@
 		stroke-opacity:0.8;
 	}
 	.link {
-		stroke-width:2px;
+		stroke-width:1px;
 		stroke: #33A02C;
 		stroke-opacity:0.5;
 		fill: none;
@@ -28,7 +28,7 @@
 	   fill-opacity:1;
 	   stroke: #eee;
 	   stroke-opacity:0.1;
-	   stroke-width:.1em;
+	   stroke-width:0;
 	}
 	svg .svg_main{
 		position: absolute;
@@ -93,6 +93,7 @@
 
 </style>
 <script src="jstat.min.js"></script>
+<script src="math.min.js"></script>
 <script src="levenshteinDistance.js"></script>
 <script src="../js/jquery-3.1.1.min.js" charset="utf-8" ></script>
 <script src="../js/d3.v3.min.js" charset="utf-8" ></script>
