--- a/brain-ui/fig3.brain.ungroup.html
+++ b/brain-ui/fig3.brain.ungroup.html
@@ -22,7 +22,7 @@
     stroke-opacity: 0.8;
   }
   .link {
-    stroke-width: 2px;
+    stroke-width: 1px;
     stroke: #33a02c;
     stroke-opacity: 0.5;
     fill: none;
@@ -33,7 +33,7 @@
     fill-opacity: 1;
     stroke: #eee;
     stroke-opacity: 0.1;
-    stroke-width: 0.1em;
+    stroke-width: 0;
   }
   svg .svg_main {
     position: absolute;
@@ -95,21 +95,29 @@
     stroke-width: 2px;
   }
 </style>
-
+<script src="jstat.min.js"></script>
+<script src="math.min.js"></script>
+<script src="levenshteinDistance.js"></script>
 <script src="../js/jquery-3.1.1.min.js" charset="utf-8"></script>
 <script src="../js/d3.v3.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="../d3.v4.js"></script>
 <script type="text/javascript" src="../d3-legend.js" charset="utf-8"></script>
 <script type="text/javascript" src="../d3-scale-chromatic.v1.1.js"></script>
-<script type="text/javascript" src="../dynamic-time-warping.min.js"></script>
+
 <script type="text/javascript" src="../js/dat.gui.js"></script>
 <script type="text/javascript" src="../js/netClustering.js"></script>
 <script type="text/javascript" src="../js/forceInABox.js"></script>
 <script type="text/javascript" src="../js/colorbrewer.js"></script>
 <script type="text/javascript" src="../js/colorbar.js"></script>
+<script type="text/javascript" src="../dynamic-time-warping.min.js"></script>
+<script type="text/javascript" src="../seedrandom.min.js"></script>
 <script
   type="text/javascript"
   src="../bootstrap-4.1.0-dist/js/bootstrap.bundle.min.js"
 ></script>
 <script type="text/javascript" src="../bootbox.min.js"></script>
-<script type="text/javascript" src="brain2_line.js" charset="utf-8"></script>
+<script
+  type="text/javascript"
+  src="fig3.brain.ungroup.js"
+  charset="utf-8"
+></script>
