--- a/fig.va.evaluation/index.html
+++ b/fig.va.evaluation/index.html
@@ -124,7 +124,17 @@
   <button id="backward" title="">
     <i class="fa fa-step-backward"></i>
   </button>
-  <label id="currentYear" class="yearLabel"></label>
+  <label
+    id="currentYear"
+    class="yearLabel"
+    style="
+      width: 100px;
+      font-size: 25px;
+      font-weight: bold;
+      color: rgb(158, 1, 66);
+      background-color: #33a02c;
+    "
+  ></label>
   <button id="advance" title="">
     <i class="fa fa-step-forward"></i>
   </button>
@@ -140,6 +150,7 @@
     <i class="fa fa-undo"></i>
   </button>
 </div>
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
 <script src="../js/jquery-3.1.1.min.js" charset="utf-8"></script>
 <script src="../js/d3.v3.min.js" charset="utf-8"></script>
